--- a/app/src/main/res/layout/activity_favorite_movies.xml
+++ b/app/src/main/res/layout/activity_favorite_movies.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".presentation.pages.movies.MoviesActivity">
 
-
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -14,25 +13,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/colorAccent">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/ic_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_bookmark_white_24dp"
-                android:title="Favoritos"
-                android:padding="10dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        android:background="@color/colorPrimary">
 
     </androidx.appcompat.widget.Toolbar>
+
     <ProgressBar
         android:id="@+id/pg_loading"
         android:layout_width="wrap_content"
