Melhorando adapter da tela de favoritos

--- a/app/src/main/res/layout/activity_favorite_movies.xml
+++ b/app/src/main/res/layout/activity_favorite_movies.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorAccent">
 
     </androidx.appcompat.widget.Toolbar>
 
