--- a/app/src/main/res/layout/activity_movies.xml
+++ b/app/src/main/res/layout/activity_movies.xml
@@ -21,6 +21,25 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/iv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_search_white_24dp"
+                android:padding="10dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/et_input"/>
+
+            <EditText
+                android:id="@+id/et_input"
+                android:layout_width="250dp"
+                android:hint="Search..."
+                android:textColor="@android:color/white"
+                android:layout_height="match_parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/iv_search"/>
+
+            <ImageView
                 android:id="@+id/ic_bookmark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
